--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.8.2",
     "date-fns": "^4.1.0",
+    "firebase": "^12.1.0",
     "lucide-react": "^0.540.0",
-    "react": "^19.1.1",
+    "react": "^18.2.0",
     "react-datepicker": "^8.7.0",
-    "react-dom": "^19.1.1",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.8.1"
+    "react-router-dom": "^7.8.1",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
