changed images by import

--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@react-google-maps/api": "^2.20.7",
     "@reduxjs/toolkit": "^2.8.2",
     "date-fns": "^4.1.0",
     "firebase": "^12.1.0",
+    "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^3.3.0",
     "lucide-react": "^0.540.0",
     "react": "^18.2.0",
     "react-datepicker": "^8.7.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.1",
     "react-toastify": "^11.0.5"
