--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@react-google-maps/api": "^2.20.7",
     "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "firebase": "^12.1.0",
     "leaflet": "^1.9.4",
