--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.1",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.22.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
