--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.1",
+    "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.22.5"
   },
