--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@react-google-maps/api": "^2.20.7",
-    "@reduxjs/toolkit": "^2.8.2",
+    "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "firebase": "^12.1.0",
@@ -29,7 +29,8 @@
     "react-router-dom": "^7.8.1",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
-    "sweetalert2": "^11.22.5"
+    "sweetalert2": "^11.23.0",
+    "sweetalert2-react-content": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
