--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.8.1",
     "react-select": "^5.10.2",
+    "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.23.0",
     "sweetalert2-react-content": "^5.1.0"
   },
