--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^7.8.1",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.23.0",
     "sweetalert2-react-content": "^5.1.0"
   },
