--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 VITE_API_BASE_URL=https://api.thebharatworks.com/api
+# VITE_API_BASE_URL=http://localhost:5001/api
 
 VITE_SOCKET_URL=https://api.thebharatworks.com/
 # VITE_SOCKET_URL=http://localhost:5001/
