--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ VITE_SOCKET_URL=https://api.thebharatworks.com/
 
 VITE_RAZORPAY_KEY_ID=rzp_test_R7z5O0bqmRXuiH
 VITE_RAZORPAY_KEY_SECRET=REOqVok223e2pouMXmoryY3A
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyBU6oBwyKGYp3YY-4M_dtgigaVDvbW55f4
