--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "^8.7.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.2.0",
     "react-responsive-carousel": "^3.2.23",
