--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-VITE_API_BASE_URL=https://api.thebharatworks.com/api
-# VITE_API_BASE_URL=http://localhost:5001/api
+# VITE_API_BASE_URL=https://api.thebharatworks.com/api
+VITE_API_BASE_URL=http://localhost:5001/api
 
-VITE_SOCKET_URL=https://api.thebharatworks.com/
-# VITE_SOCKET_URL=http://localhost:5001/
+# VITE_SOCKET_URL=https://api.thebharatworks.com/
+VITE_SOCKET_URL=http://localhost:5001/
 
 VITE_RAZORPAY_KEY_ID=rzp_test_R7z5O0bqmRXuiH
 VITE_RAZORPAY_KEY_SECRET=REOqVok223e2pouMXmoryY3A
